--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
 
     <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js?v=2"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
         (function() {
