add favicon; clean up spacing; fix contact form colors

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chorvinsky Smart Home - DC Metro</title>
+    <title>Chorvinsky Smart Homes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/svg+xml" href="assets/logo_purple.svg">
 </head>
 <body class="min-h-screen bg-gradient-to-br from-[#0a0f1c] via-[#1a1f35] to-[#0a0f1c] text-slate-100 font-[Inter]">
     <main class="relative mx-auto max-w-[8.5in] min-h-[11in] shadow-2xl overflow-hidden">
