--- a/index.html
+++ b/index.html
@@ -10,45 +10,44 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" type="image/svg+xml" href="assets/logo_purple.svg">
 </head>
-<body class="min-h-screen bg-gradient-to-br from-[#0a0f1c] via-[#1a1f35] to-[#0a0f1c] text-slate-100 font-[Inter]">
-    <main class="relative mx-auto max-w-[8.5in] min-h-[11in] shadow-2xl overflow-hidden">
-        <div class="pointer-events-none absolute inset-0 opacity-[0.02]" style="background-image:url('data:image/svg+xml,%3Csvg width=\'60\' height=\'60\' viewBox=\'0 0 60 60\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cg fill=\'%23ffffff\'%3E%3Ccircle cx=\'30\' cy=\'30\' r=\'1\'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')"></div>
+<body class="min-h-screen bg-gradient-to-br from-amber-50 via-amber-100 to-yellow-50 text-slate-800 font-[Inter]">
+<main class="relative mx-auto max-w-[8.5in] min-h-[11in] shadow-2xl overflow-hidden bg-white/80">
+    <div class="pointer-events-none absolute inset-0 opacity-[0.03]" style="background-image:url('data:image/svg+xml,%3Csvg width=\'60\' height=\'60\' viewBox=\'0 0 60 60\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cg fill=\'%23d97706\'%3E%3Ccircle cx=\'30\' cy=\'30\' r=\'1\'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')"></div>
 
-        <section data-include="header"></section>
-        <section data-include="hero"></section>
-        <section data-include="services"></section>
-        <section data-include="process"></section>
-        <section data-include="packages"></section>
-        <section data-include="why"></section>
-        <section data-include="contact"></section>
-    </main>
+    <section data-include="header"></section>
+    <section data-include="hero"></section>
+    <section data-include="services"></section>
+    <section data-include="process"></section>
+    <section data-include="packages"></section>
+    <section data-include="why"></section>
+    <section data-include="contact"></section>
+</main>
 
-    <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function() {
-            emailjs.init("-LKHbi7c8PgshEsXX");
-        })();
-    </script>
-    <script type="text/javascript">
-        window.onload = function() {
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
-                event.preventDefault();
-                // these IDs from the previous steps
-                emailjs.sendForm('contact_service', 'contact_form', this)
-                    .then(() => {
-                        console.log('SUCCESS!');
-                    }, (error) => {
-                        console.log('FAILED...', error);
-                    });
-            });
-        }
-    </script>
+<!-- EmailJS SDK -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<script type="text/javascript">
+    (function() {
+        emailjs.init("-LKHbi7c8PgshEsXX");
+    })();
+</script>
+<script type="text/javascript">
+    window.onload = function() {
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            emailjs.sendForm('contact_service', 'contact_form', this)
+                .then(() => {
+                    console.log('SUCCESS!');
+                }, (error) => {
+                    console.log('FAILED...', error);
+                });
+        });
+    }
+</script>
 
-    <!-- Loader script -->
-    <script src="./loader.js"></script>
+<!-- Loader script -->
+<script src="./loader.js"></script>
 
-    <!-- Form handler script -->
-    <script src="./form-handler.js"></script>
+<!-- Form handler script -->
+<script src="./form-handler.js"></script>
 </body>
 </html>
