--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/svg+xml" href="assets/logo_purple.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/logo-yellow-green.svg">
 </head>
 <body class="min-h-screen bg-gradient-to-br from-amber-50 via-amber-100 to-yellow-50 text-slate-800 font-[Inter]">
 <main class="relative mx-auto max-w-[8.5in] min-h-[11in] shadow-2xl overflow-hidden bg-white/80">
